--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,66 +9,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- <script src="./libs/axios.min.js"></script> -->
+
 </head>
 
 <body>
-    <h1>Add a product</h1>
+    <h1>E-COMMERCE WEBSITE</h1>
 
-    <a href="./index.html">Home</a>
-    <a href="./products.html">All Products</a>
+    <a href="products.html"> All Products </a>
+    <a href="index.html">Home</a>
+    <form onsubmit="createProduct(); return false">
+        <label for="productName">productName</label>
+        <input type="text" id="productName"> <br>
 
+        <label for="productPrice">productPrice</label>
+        <input type="number" id="productPrice"> <br>
 
-    <form onsubmit="createProduct(); return false ">
+        <label for="currencyCode">currencyCode</label>
+        <input type="text" id="currencyCode"> <br>
 
-        <label for="productName">Product Name</label>
-        <input type="text" id="productName" required>
-        <br>
+        <label for="numberOfSale">numberOfSale</label>
+        <input type="number" id="numberOfSale"> <br>
 
-        <label for="productPrice">Product Price</label>
-        <input type="number" id="productPrice" required>
-        <br>
+        <label for="rating">rating</label>
+        <input type="number" id="rating"> <br>
 
-        <label for="currencyCode">Currency Code</label>
-        <input type="text" id="currencyCode" required>
-        <br>
-
-        <label for="numberOfSale">Number Of Sale</label>
-        <input type="number" id="numberOfSale" required>
-        <br>
-
-        <label for="rating">Product Rating</label>
-        <input type="number" min="0" max="5" id="rating" required>
-        <br>
-
-        <label for="isFreeShipping">Free Shipping</label>
-        <select name="isFreeShipping" id="isFreeShipping">
-            <option value="true">Yes</option>
-            <option value="false">No</option>
+        <label for="isFreeShipping">isFreeShipping</label>
+        <select name="isFreeShipping" id="isFreeShipping">isFreeShipping
+            <option value="yes" name="isFreeShipping">yes</option>
+            <option value="no" name="isFreeShipping">no</option>
         </select>
-        <br>
+        
+        <label for="shopName">shopName</label>
+        <input type="text" id="shopName"> <br>
 
-        <label for="shopName">shop Name</label>
-        <input type="text" id="shopName" required>
-        <br>
+        <button type="submit">store in database</button>
 
-        <input type="submit" value="Add in database">
+
     </form>
 
     <p id="message"></p>
 
-
-
     <script>
 
-let baseUrl;
+      //  let baseURL = "http://localhost:3000/product";
+    let baseUrl;
 
-if (window.location.href.indexOf("https") === -1) {
+    if (window.location.href.indexOf("https") === -1) {
     baseUrl = "http://localhost:3000";
-} else {
+    } else {
     baseUrl = "https://e-commerce-web-crud-operation.herokuapp.com/";
-}
-
+} 
         function createProduct() {
 
             let productName = document.querySelector("#productName").value;
@@ -77,31 +69,31 @@ if (window.location.href.indexOf("https") === -1) {
             let isFreeShipping = document.querySelector("#isFreeShipping").value;
             let shopName = document.querySelector("#shopName").value;
 
-            
-            axios.post('${baseUrl}/product', {
-                productName,
-                productPrice,
-                currencyCode,
-                numberOfSale,
-                rating,
-                isFreeShipping,
-                shopName,
+
+
+
+
+            axios.post("http://localhost:3000/product", {
+                productName: productName,
+                productPrice: productPrice,
+                currencyCode: currencyCode,
+                numberOfSale: numberOfSale,
+                rating: rating,
+                isFreeShipping: isFreeShipping,
+                shopName: shopName
             })
                 .then(function (response) {
                     console.log(response.data);
                     document.querySelector("#message").innerHTML = response.data.message;
                 })
                 .catch(function (error) {
-                    console.log(error.response.data);
+                    console.log(error.response.data.message);
                     document.querySelector("#message").innerHTML = error.response.data.message;
-                });
+                })
         }
 
+        </script>
+        </body>
 
 
-    </script>
 
-
-</body>
-
-</html>
